--- a/index.css
+++ b/index.css
@@ -14,3 +14,18 @@
 ::-moz-selection {
     background: #2D9CDB40;
 }
+
+.video{
+	transition: 1s opacity; 
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+  	background-size: cover;
+  	position: fixed;	
+  	-webkit-filter: blur(10px);
+  	-moz-filter: blur(10px);
+  	-o-filter: blur(10px);
+  	-ms-filter: blur(10px);
+  	filter: blur(10px);
+  	z-index: -10;
+}
