--- a/index.css
+++ b/index.css
@@ -29,3 +29,71 @@
   	filter: blur(10px);
   	z-index: -10;
 }
+
+html{
+	width: 100%;
+ 	height: auto;
+ 	min-height: 100%;
+ 	margin: 0;
+	border: 0;
+}
+body{
+	width: 100%;
+ 	height: auto;
+ 	min-height: 100%;
+	border: 0;
+	margin: 0;
+	background-color: #0f0f11;
+	overflow: hidden;
+}
+header{
+	top: 0;
+	width: 100%;
+	height: 63px;
+	min-height: 63px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
+	background-color: #2a2a2a;
+	z-index: 700;
+	transition: 1s;
+}
+*, ::after, ::before {
+    position: relative;
+    box-sizing: inherit;
+}
+main{
+	position: relative;
+	left: 0;
+	width: 100%;
+	max-width: 100%;
+	height: auto;
+	min-height: calc(100% - 63px);
+}
+a{
+	width: auto;
+	height: 10px;
+	padding: 20px;
+	margin-left: 50px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	border-radius: 10px;
+	background: #2D9CDB;
+	border: 2px solid #2D9CDB;
+	text-align: center;
+	color: #ffffff;
+	text-decoration: none;
+	font-family: OpenSans,sans-serif, "arial";
+    text-transform: uppercase;
+    letter-spacing: .075em;
+	transition: 1s;
+}
+
+a:hover{
+	background: #00000000;
+	color: #2D9CDB;
+}
