--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@ body{
  	min-height: 100%;
 	border: 0;
 	margin: 0;
-	background-color: #0f0f11;
+    background-color: #2a2a2a;
 	overflow: hidden;
 }
 header{
@@ -96,4 +96,23 @@ a{
 a:hover{
 	background: #00000000;
 	color: #2D9CDB;
+}
+
+h1{
+	text-align: center;
+	margin: 0;
+	font-size: 4em;
+	font-family: Brutal_Medium, "Open Sans", arial;
+	font-feature-settings: "kern" 1;
+	font-weight: 500;
+	color: #ffffff;
+	-webkit-font-smoothing: subpixel-antialiased;
+	box-sizing: border-box;
+	line-height: calc(1em + 0.5vw);
+	font-family: "arial", sans-serif;
+}
+p{
+	font-size: 17px;
+	font-family: OpenSans,sans-serif;
+	color: #ffffff;
 }
